--- a/taihuitao/BuyGoodsTableViewCell.xib
+++ b/taihuitao/BuyGoodsTableViewCell.xib
@@ -13,14 +13,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="121" id="KGk-i7-Jjw" customClass="BuyGoodsTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="364" height="121"/>
+            <rect key="frame" x="0.0" y="0.0" width="364" height="120"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="364" height="120.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="364" height="119.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6TA-x9-OLx">
-                        <rect key="frame" x="13" y="13" width="100" height="94.5"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cycle_07.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="6TA-x9-OLx">
+                        <rect key="frame" x="13" y="13" width="100" height="93.5"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="100" id="QTi-MM-mzC"/>
                         </constraints>
@@ -32,7 +32,8 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pO9-S8-VII">
-                        <rect key="frame" x="300" y="72.5" width="46" height="30"/>
+                        <rect key="frame" x="300" y="71.5" width="46" height="30"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="46" id="4vN-Fm-WbO"/>
                             <constraint firstAttribute="height" constant="30" id="m1Z-Mt-uSu"/>
@@ -54,4 +55,7 @@
             <point key="canvasLocation" x="54" y="124.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="cycle_07.jpg" width="600" height="330"/>
+    </resources>
 </document>
