--- a/taihuitao/PersonalTableViewController.xib
+++ b/taihuitao/PersonalTableViewController.xib
@@ -1,26 +1,124 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PersonalTableViewController">
             <connections>
+                <outlet property="tableViewHeaderView" destination="fdz-Pd-tQC" id="7Cd-Yy-1hx"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableView opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" bouncesZoom="NO" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="i5M-Pr-FkT">
+        <tableView opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" bouncesZoom="NO" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <viewLayoutGuide key="safeArea" id="NQg-xp-Ubj"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <view key="tableHeaderView" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="fdz-Pd-tQC">
+                <rect key="frame" x="0.0" y="0.0" width="375" height="235"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1RT-a1-dBP">
+                        <rect key="frame" x="162.5" y="42.5" width="50" height="50"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="50" id="4Jm-dh-1Iy"/>
+                            <constraint firstAttribute="width" constant="50" id="G3u-8o-kBH"/>
+                        </constraints>
+                        <state key="normal" image="default_user_loading_icon_100x100_"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                <integer key="value" value="25"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                        </userDefinedRuntimeAttributes>
+                    </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="用户名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1yr-Hd-lkM">
+                        <rect key="frame" x="166" y="107.5" width="43" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="想要的生活" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P93-G6-4Q8">
+                        <rect key="frame" x="50" y="135" width="275" height="14.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" red="0.6666138768196106" green="0.66670918464660645" blue="0.66658484935760498" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="关注" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="32r-mM-lXi">
+                        <rect key="frame" x="175.5" y="196" width="25" height="14.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" red="0.66661387679999995" green="0.66670918459999995" blue="0.66658484939999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="粉丝" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pp8-R3-iIf">
+                        <rect key="frame" x="306.5" y="196" width="25" height="14.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" red="0.66661387679999995" green="0.66670918459999995" blue="0.66658484939999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="获赞" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sI0-li-gMU">
+                        <rect key="frame" x="44" y="186" width="25" height="34"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" red="0.66661387679999995" green="0.66670918459999995" blue="0.66658484939999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BHj-GU-hj0">
+                        <rect key="frame" x="50" y="169.5" width="12.5" height="24"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hBJ-Zm-xhe">
+                        <rect key="frame" x="181.5" y="169.5" width="12.5" height="24"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qrd-1f-Dqq">
+                        <rect key="frame" x="312.5" y="169.5" width="12.5" height="24"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                <constraints>
+                    <constraint firstItem="BHj-GU-hj0" firstAttribute="leading" secondItem="fdz-Pd-tQC" secondAttribute="leading" constant="50" id="3i2-TE-hl3"/>
+                    <constraint firstAttribute="bottom" secondItem="sI0-li-gMU" secondAttribute="bottom" constant="15" id="5BX-eE-7BL"/>
+                    <constraint firstItem="Pp8-R3-iIf" firstAttribute="centerY" secondItem="sI0-li-gMU" secondAttribute="centerY" id="7yd-y0-R1A"/>
+                    <constraint firstItem="qrd-1f-Dqq" firstAttribute="centerY" secondItem="BHj-GU-hj0" secondAttribute="centerY" id="A23-jy-sz7"/>
+                    <constraint firstItem="1yr-Hd-lkM" firstAttribute="centerX" secondItem="1RT-a1-dBP" secondAttribute="centerX" id="Ccv-7n-vit"/>
+                    <constraint firstItem="P93-G6-4Q8" firstAttribute="top" secondItem="1yr-Hd-lkM" secondAttribute="bottom" constant="10.5" id="F42-op-JEo"/>
+                    <constraint firstItem="hBJ-Zm-xhe" firstAttribute="centerY" secondItem="BHj-GU-hj0" secondAttribute="centerY" id="KI9-K0-Ska"/>
+                    <constraint firstItem="1RT-a1-dBP" firstAttribute="centerX" secondItem="fdz-Pd-tQC" secondAttribute="centerX" id="OlH-YM-OZ2"/>
+                    <constraint firstItem="1yr-Hd-lkM" firstAttribute="top" secondItem="1RT-a1-dBP" secondAttribute="bottom" constant="15" id="QXk-kj-wcP"/>
+                    <constraint firstAttribute="trailing" secondItem="P93-G6-4Q8" secondAttribute="trailing" constant="50" id="VLe-46-Vs3"/>
+                    <constraint firstItem="hBJ-Zm-xhe" firstAttribute="centerX" secondItem="fdz-Pd-tQC" secondAttribute="centerX" id="afq-gr-nJA"/>
+                    <constraint firstItem="hBJ-Zm-xhe" firstAttribute="top" secondItem="P93-G6-4Q8" secondAttribute="bottom" constant="20" id="dgo-Ed-HpQ"/>
+                    <constraint firstAttribute="trailing" secondItem="qrd-1f-Dqq" secondAttribute="trailing" constant="50" id="fwJ-TX-8og"/>
+                    <constraint firstItem="sI0-li-gMU" firstAttribute="top" secondItem="fdz-Pd-tQC" secondAttribute="top" constant="186" id="gOE-d9-8Nw"/>
+                    <constraint firstItem="32r-mM-lXi" firstAttribute="centerX" secondItem="hBJ-Zm-xhe" secondAttribute="centerX" id="kPD-8D-0Y2"/>
+                    <constraint firstItem="1RT-a1-dBP" firstAttribute="centerY" secondItem="fdz-Pd-tQC" secondAttribute="centerY" constant="-50" id="rhs-Bj-5c5"/>
+                    <constraint firstItem="qrd-1f-Dqq" firstAttribute="centerX" secondItem="Pp8-R3-iIf" secondAttribute="centerX" id="ttq-BA-v4c"/>
+                    <constraint firstItem="32r-mM-lXi" firstAttribute="centerY" secondItem="sI0-li-gMU" secondAttribute="centerY" id="u9Z-Od-DXo"/>
+                    <constraint firstItem="P93-G6-4Q8" firstAttribute="leading" secondItem="fdz-Pd-tQC" secondAttribute="leading" constant="50" id="v0g-qB-nOW"/>
+                    <constraint firstItem="sI0-li-gMU" firstAttribute="centerX" secondItem="BHj-GU-hj0" secondAttribute="centerX" id="wnu-rm-wkj"/>
+                </constraints>
+            </view>
             <connections>
                 <outlet property="dataSource" destination="-1" id="Tng-2m-Rnh"/>
                 <outlet property="delegate" destination="-1" id="9aC-8N-iBw"/>
             </connections>
+            <point key="canvasLocation" x="32.5" y="68.5"/>
         </tableView>
     </objects>
+    <resources>
+        <image name="default_user_loading_icon_100x100_" width="100" height="100"/>
+    </resources>
 </document>
