--- a/taihuitao/GoodsDetailsTableViewCell.xib
+++ b/taihuitao/GoodsDetailsTableViewCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -25,10 +25,9 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="xxx-xx-xx" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mja-qZ-ulh">
-                        <rect key="frame" x="5" y="215" width="100" height="21"/>
+                        <rect key="frame" x="5" y="215" width="200" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="21" id="Bcw-da-MGp"/>
-                            <constraint firstAttribute="width" constant="100" id="ja6-gi-P8J"/>
+                            <constraint firstAttribute="height" constant="21" id="2SH-I5-OwJ"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
@@ -59,21 +58,29 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="ob0-Bc-1YO" secondAttribute="bottom" constant="5" id="2ab-37-cgZ"/>
-                    <constraint firstItem="Mja-qZ-ulh" firstAttribute="leading" secondItem="6p9-JZ-wOm" secondAttribute="leading" id="Bx7-nU-7gs"/>
+                    <constraint firstItem="V4i-fQ-pWT" firstAttribute="leading" secondItem="Mja-qZ-ulh" secondAttribute="trailing" constant="10" id="7cA-HP-6HW"/>
                     <constraint firstItem="ob0-Bc-1YO" firstAttribute="leading" secondItem="6p9-JZ-wOm" secondAttribute="leading" id="CLY-ww-bMc"/>
                     <constraint firstItem="IbU-GG-Lj0" firstAttribute="bottom" secondItem="6p9-JZ-wOm" secondAttribute="bottom" id="J1g-OJ-D4V"/>
                     <constraint firstItem="IbU-GG-Lj0" firstAttribute="trailing" secondItem="6p9-JZ-wOm" secondAttribute="trailing" id="K7c-ny-hr6"/>
                     <constraint firstItem="6p9-JZ-wOm" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="MQm-J5-bLh"/>
                     <constraint firstItem="ob0-Bc-1YO" firstAttribute="trailing" secondItem="6p9-JZ-wOm" secondAttribute="trailing" id="OYH-7k-ynq"/>
                     <constraint firstItem="IbU-GG-Lj0" firstAttribute="leading" secondItem="6p9-JZ-wOm" secondAttribute="leading" id="T34-yD-UYe"/>
+                    <constraint firstItem="Mja-qZ-ulh" firstAttribute="top" secondItem="6p9-JZ-wOm" secondAttribute="bottom" constant="10" id="Vo1-AA-LyE"/>
                     <constraint firstItem="6p9-JZ-wOm" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="iee-gN-ptn"/>
                     <constraint firstItem="ob0-Bc-1YO" firstAttribute="top" secondItem="V4i-fQ-pWT" secondAttribute="bottom" constant="5" id="ljZ-rM-Fdk"/>
-                    <constraint firstItem="Mja-qZ-ulh" firstAttribute="top" secondItem="IbU-GG-Lj0" secondAttribute="bottom" constant="10" id="mKw-4b-eXU"/>
                     <constraint firstAttribute="trailing" secondItem="6p9-JZ-wOm" secondAttribute="trailing" constant="5" id="qLy-Gj-Us9"/>
+                    <constraint firstItem="Mja-qZ-ulh" firstAttribute="leading" secondItem="6p9-JZ-wOm" secondAttribute="leading" id="qm6-JU-ocq"/>
                     <constraint firstItem="V4i-fQ-pWT" firstAttribute="trailing" secondItem="IbU-GG-Lj0" secondAttribute="trailing" id="rpc-v5-Yoa"/>
                     <constraint firstItem="V4i-fQ-pWT" firstAttribute="top" secondItem="IbU-GG-Lj0" secondAttribute="bottom" constant="10" id="vVz-tq-Bau"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="dateLabel" destination="Mja-qZ-ulh" id="DlB-3f-wnW"/>
+                <outlet property="goodsBkImageView" destination="6p9-JZ-wOm" id="FTZ-yj-s0V"/>
+                <outlet property="introduceLabel" destination="ob0-Bc-1YO" id="fni-Rn-IA2"/>
+                <outlet property="readNumLabel" destination="V4i-fQ-pWT" id="JiC-EY-Nte"/>
+                <outlet property="titleLabel" destination="IbU-GG-Lj0" id="FL9-Ru-YMo"/>
+            </connections>
             <point key="canvasLocation" x="-64" y="98"/>
         </tableViewCell>
     </objects>
