--- a/taihuitao/GoodsDetailsTableViewCell.xib
+++ b/taihuitao/GoodsDetailsTableViewCell.xib
@@ -11,67 +11,70 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="345" id="KGk-i7-Jjw" customClass="GoodsDetailsTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="345"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="378" id="KGk-i7-Jjw" customClass="GoodsDetailsTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="321" height="378"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="344.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="321" height="377.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="recomand_19.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="6p9-JZ-wOm">
-                        <rect key="frame" x="5" y="5" width="310" height="200"/>
+                        <rect key="frame" x="5" y="5" width="311" height="200"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="200" id="VXe-Io-NrT"/>
+                            <constraint firstAttribute="height" constant="200" id="qbH-ph-C8o"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="xxx-xx-xx" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mja-qZ-ulh">
-                        <rect key="frame" x="5" y="215" width="200" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="xxx-xx-xx" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mja-qZ-ulh">
+                        <rect key="frame" x="5" y="242" width="201" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="21" id="2SH-I5-OwJ"/>
+                            <constraint firstAttribute="height" constant="21" id="7g0-lt-a3Q"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
+                        <color key="textColor" red="0.4939831495" green="0.49811440709999999" blue="0.5019184351" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="阅读:xxxx" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V4i-fQ-pWT">
-                        <rect key="frame" x="215" y="215" width="100" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="阅读:xxxx" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V4i-fQ-pWT">
+                        <rect key="frame" x="216" y="242" width="100" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="21" id="Jng-rz-Sn5"/>
-                            <constraint firstAttribute="width" constant="100" id="qpD-9S-scZ"/>
+                            <constraint firstAttribute="height" constant="21" id="7BO-nX-SsZ"/>
+                            <constraint firstAttribute="width" constant="100" id="awB-bJ-iTL"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
+                        <color key="textColor" red="0.4939831495" green="0.49811440709999999" blue="0.5019184351" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="文章图文混排介绍" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ob0-Bc-1YO">
-                        <rect key="frame" x="5" y="241" width="310" height="98.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <rect key="frame" x="10" y="268" width="301" height="107.5"/>
+                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
+                        <color key="textColor" red="0.2781479657" green="0.2823043764" blue="0.28649967910000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="这是标题" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IbU-GG-Lj0">
-                        <rect key="frame" x="5" y="184" width="310" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <rect key="frame" x="5" y="215" width="311" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="dSG-QY-Ryy"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
+                        <color key="textColor" red="0.2781479657" green="0.2823043764" blue="0.28649967910000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="ob0-Bc-1YO" secondAttribute="bottom" constant="5" id="2ab-37-cgZ"/>
-                    <constraint firstItem="V4i-fQ-pWT" firstAttribute="leading" secondItem="Mja-qZ-ulh" secondAttribute="trailing" constant="10" id="7cA-HP-6HW"/>
-                    <constraint firstItem="ob0-Bc-1YO" firstAttribute="leading" secondItem="6p9-JZ-wOm" secondAttribute="leading" id="CLY-ww-bMc"/>
-                    <constraint firstItem="IbU-GG-Lj0" firstAttribute="bottom" secondItem="6p9-JZ-wOm" secondAttribute="bottom" id="J1g-OJ-D4V"/>
-                    <constraint firstItem="IbU-GG-Lj0" firstAttribute="trailing" secondItem="6p9-JZ-wOm" secondAttribute="trailing" id="K7c-ny-hr6"/>
-                    <constraint firstItem="6p9-JZ-wOm" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="MQm-J5-bLh"/>
-                    <constraint firstItem="ob0-Bc-1YO" firstAttribute="trailing" secondItem="6p9-JZ-wOm" secondAttribute="trailing" id="OYH-7k-ynq"/>
-                    <constraint firstItem="IbU-GG-Lj0" firstAttribute="leading" secondItem="6p9-JZ-wOm" secondAttribute="leading" id="T34-yD-UYe"/>
-                    <constraint firstItem="Mja-qZ-ulh" firstAttribute="top" secondItem="6p9-JZ-wOm" secondAttribute="bottom" constant="10" id="Vo1-AA-LyE"/>
-                    <constraint firstItem="6p9-JZ-wOm" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="iee-gN-ptn"/>
-                    <constraint firstItem="ob0-Bc-1YO" firstAttribute="top" secondItem="V4i-fQ-pWT" secondAttribute="bottom" constant="5" id="ljZ-rM-Fdk"/>
-                    <constraint firstAttribute="trailing" secondItem="6p9-JZ-wOm" secondAttribute="trailing" constant="5" id="qLy-Gj-Us9"/>
-                    <constraint firstItem="Mja-qZ-ulh" firstAttribute="leading" secondItem="6p9-JZ-wOm" secondAttribute="leading" id="qm6-JU-ocq"/>
-                    <constraint firstItem="V4i-fQ-pWT" firstAttribute="trailing" secondItem="IbU-GG-Lj0" secondAttribute="trailing" id="rpc-v5-Yoa"/>
-                    <constraint firstItem="V4i-fQ-pWT" firstAttribute="top" secondItem="IbU-GG-Lj0" secondAttribute="bottom" constant="10" id="vVz-tq-Bau"/>
+                    <constraint firstItem="V4i-fQ-pWT" firstAttribute="leading" secondItem="Mja-qZ-ulh" secondAttribute="trailing" constant="10" id="2rG-5Z-5DT"/>
+                    <constraint firstAttribute="trailing" secondItem="V4i-fQ-pWT" secondAttribute="trailing" constant="5" id="HbP-BG-Qee"/>
+                    <constraint firstItem="V4i-fQ-pWT" firstAttribute="top" secondItem="IbU-GG-Lj0" secondAttribute="bottom" constant="6" id="OOx-Ta-AFr"/>
+                    <constraint firstItem="Mja-qZ-ulh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="OvE-gr-gBd"/>
+                    <constraint firstItem="ob0-Bc-1YO" firstAttribute="top" secondItem="Mja-qZ-ulh" secondAttribute="bottom" constant="5" id="YEZ-fl-f5I"/>
+                    <constraint firstAttribute="trailing" secondItem="ob0-Bc-1YO" secondAttribute="trailing" constant="10" id="aH1-Kz-7Xq"/>
+                    <constraint firstAttribute="bottom" secondItem="ob0-Bc-1YO" secondAttribute="bottom" constant="2" id="enk-py-bGY"/>
+                    <constraint firstItem="ob0-Bc-1YO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="fjs-Dq-3VN"/>
+                    <constraint firstItem="6p9-JZ-wOm" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="hJ4-yn-Ofl"/>
+                    <constraint firstItem="6p9-JZ-wOm" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="jTf-MB-EI9"/>
+                    <constraint firstItem="IbU-GG-Lj0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="mkw-ag-V7P"/>
+                    <constraint firstAttribute="trailing" secondItem="6p9-JZ-wOm" secondAttribute="trailing" constant="5" id="pmh-Y3-p6z"/>
+                    <constraint firstItem="IbU-GG-Lj0" firstAttribute="top" secondItem="6p9-JZ-wOm" secondAttribute="bottom" constant="10" id="poh-46-Y6F"/>
+                    <constraint firstItem="Mja-qZ-ulh" firstAttribute="top" secondItem="IbU-GG-Lj0" secondAttribute="bottom" constant="6" id="pwf-ge-PI2"/>
+                    <constraint firstAttribute="trailing" secondItem="IbU-GG-Lj0" secondAttribute="trailing" constant="5" id="tZg-Cj-Bpi"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -81,7 +84,7 @@
                 <outlet property="readNumLabel" destination="V4i-fQ-pWT" id="JiC-EY-Nte"/>
                 <outlet property="titleLabel" destination="IbU-GG-Lj0" id="FL9-Ru-YMo"/>
             </connections>
-            <point key="canvasLocation" x="-81" y="108.5"/>
+            <point key="canvasLocation" x="-80.5" y="125"/>
         </tableViewCell>
     </objects>
     <resources>
